[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "subnethostcount"
version = "0.1.0"
description = "Count usable IPv4 hosts across CIDR subnets and individual IP addresses."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Defensive Origins", email = "info@defensiveorigins.com" }
]
keywords = ["cidr", "subnet", "ipv4", "networking", "host count", "defensive origins"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Networking",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/DefensiveOrigins/SubnetHostCount"
Source = "https://github.com/DefensiveOrigins/SubnetHostCount"
"Issue Tracker" = "https://github.com/DefensiveOrigins/SubnetHostCount/issues"

[project.scripts]
# Primary CLI name
subnethostcount = "HostCount:main"

# Optional alias, if you want it
cidr-host-count = "HostCount:main"

[tool.hatch.build]
# Include the single-module script and the README in the built distributions
include = [
  "HostCount.py",
  "README.md",
]
